// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`look up book by id 1`] = `
Object {
  "docs": Array [
    Object {
      "_id": "5cf5805fb53e011a64671582",
      "name": "The Fellowship Of The Ring",
    },
  ],
  "limit": 1000,
  "offset": 0,
  "page": 1,
  "pages": 1,
  "total": 1,
}
`;

exports[`unauthenticated URL works 1`] = `
Object {
  "docs": Array [
    Object {
      "_id": "5cf5805fb53e011a64671582",
      "name": "The Fellowship Of The Ring",
    },
    Object {
      "_id": "5cf58077b53e011a64671583",
      "name": "The Two Towers",
    },
    Object {
      "_id": "5cf58080b53e011a64671584",
      "name": "The Return Of The King",
    },
  ],
  "limit": 1000,
  "offset": 0,
  "page": 1,
  "pages": 1,
  "total": 3,
}
`;
